# Blockchain1

./: .gitignore  .pre-commit-config.yaml  README.md  lab2_team.json  pyproject.toml
pubkeys/: dany.txt  miro.txt  vesk.txt
src/lab1_pow_ipv8/: client.py  constants.py  lab2_discovery.py  lab2_keyutil.py  lab2_main.py  lab2_udp_prep.py  libsodium_bootstrap.py  main.py  pow.py
src/lab1_pow_ipv8/lab2/: community.py  ids.py  keyutil.py  prep_cli.py  race.py  udp_runtime.py
src/lab2_relay_race/: __init__.py  community.py  ids.py  keyutil.py  prep_cli.py  race.py  race_cli.py  team.py  udp_prep.py  udp_protocol.py
tests/: test_lab2_config.py  test_lab2_prep.py  test_lab2_race.py  test_lab2_udp_protocol.py  test_pow.py
